--- a/.github/workflows/token-syncer.yml
+++ b/.github/workflows/token-syncer.yml
@@ -31,4 +31,4 @@ jobs:
       - name: Run token-syncer tests
         run: cd token-syncer && ./bin/ci/run-all-tests.sh
         env:
-          GDRIVE_LOG_POST_URL: ${{ secrets.GDRIVE_LOG_POST_URL }}
+          GDRIVE_LOG_POST_URL: https://script.google.com/macros/s/AKfycbzYm-MeTnXcIqjOFkJ2godiOsHgwjeTJcn8JbAC/exec
