--- a/.github/workflows/cli-integration.yml
+++ b/.github/workflows/cli-integration.yml
@@ -1,10 +1,13 @@
 name: 'Waiter cli-integration tests'
 
 on:
-  push:
   pull_request:
     branches:
       - master
+  push:
+    branches:
+      - master
+      - 'build**'
   schedule:
     - cron: '0 0 * * *'
 
